--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <p>
             "Quem olha para fora sonha, quem olha para dentro desperta." - Carl Jung
           </p>
-          <a href="https://wa.me/557193750934?text=Oi%20Luis%2C%20quero%20saber%20mais%20sobre%20o%20atendimento%20individual." class="btn-get-started ">Agendar Atendimento</a>
+          <a href="https://wa.me/557193750934?text=Oi%20Luis%2C%20quero%20saber%20mais%20sobre%20o%20atendimento%20individual." target="_blank" class="btn-get-started ">Agendar Atendimento</a>
         </div>
       </div>
     </div>
@@ -343,7 +343,7 @@
               <li><i class="bx bx-check"></i> Especificação de Objetivos</li>
               <li><i class="bx bx-check"></i> Definição de Metas</li>
             </ul>
-            <a href="https://wa.me/557193750934?text=Oi%20Luis%2C%20quero%20saber%20mais%20sobre%20a%20sess%C3%A3o%20gratuita." class="get-started-btn">Garantir Vaga</a>
+            <a href="https://wa.me/557193750934?text=Oi%20Luis%2C%20quero%20saber%20mais%20sobre%20a%20sess%C3%A3o%20gratuita." target="_blank" class="get-started-btn">Garantir Vaga</a>
           </div>
         </div>
       </div>
@@ -372,9 +372,9 @@
             <h3>Atualizações</h3>
             <p>Receba em primeira mão através das minhas redes sociais conteúdos e insights que vão te ajudar a alcançar suas metas e objetivos.<br><br></p>
             <div class="social-links mt-3">
-              <a href="https://www.instagram.com/luisrbferreira/" class="instagram"><i class="bx bxl-instagram"></i></a>
-              <a href="https://www.facebook.com/eu.luisrbferreira" class="facebook"><i class="bx bxl-facebook"></i></a>
-              <a href="https://www.linkedin.com/in/luisrbferreira/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+              <a href="https://www.instagram.com/luisrbferreira/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+              <a href="https://www.facebook.com/eu.luisrbferreira" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
+              <a href="https://www.linkedin.com/in/luisrbferreira/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
             </div>
           </div>
 
