--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="logo float-left">
         <!-- <h1 class="text-light"><a href="index.html"><span>Moderna</span></a></h1> -->
         <!-- Uncomment below if you prefer to use an image logo -->
-        <a href="#hero-no-slider"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
+        <a href="#"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
       </div>
 
       <nav class="nav-menu float-right d-none d-lg-block">
@@ -218,7 +218,7 @@
             <div class="icon-box icon-box-pink">
               <div class="icon"><i class='bx bx-timer bx-tada'></i></div>
               <h4 class="title"><a>+50</a></h4>
-              <p class="description">horas de processos de coaching individual</p>
+              <p class="description">horas de processos de coaching individuais realizadas</p>
             </div>
           </div>
 
@@ -234,7 +234,7 @@
             <div class="icon-box icon-box-blue">
               <div class="icon"><i class='bx bx-heart'></i></div>
               <h4 class="title"><a>+500</a></h4>
-              <p class="description">horas em projetos sociais e de voluntariado</p>
+              <p class="description">horas de participação em projetos sociais e de voluntariado</p>
             </div>
           </div>
         </div>
