--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             <div class="icon-box icon-box-pink">
               <div class="icon"><i class='bx bx-timer bx-tada'></i></div>
               <h4 class="title"><a>+50</a></h4>
-              <p class="description">horas de processos de coaching individuais realizadas</p>
+              <p class="description">horas completas de processos de coaching individual</p>
             </div>
           </div>
 
@@ -329,7 +329,7 @@
 
         <div class="section-title">
           <h2>Bônus</h2>
-          <p>Estou abrindo 5 vagas para pessoas que queiram realizar uma sessão de coaching de forma totalmente gratuita, confere os beneficíos abaixo.</p>
+          <p>Estou abrindo 5 vagas para pessoas que queiram realizar uma sessão de coaching <br>de forma totalmente gratuita, confere os beneficíos abaixo.</p>
         </div>
 
         <div class="row justify-content-center no-gutters">
