--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             <div class="icon-box icon-box-cyan">
               <div class="icon"><i class='bx bx-medal'></i></div>
               <h4 class="title"><a>06</a></h4>
-              <p class="description">certificações reconhecidas internacionalmente</p>
+              <p class="description">certificações com selos de instituições reconhecidas internacionalmente</p>
             </div>
           </div>
 
@@ -226,7 +226,7 @@
             <div class="icon-box icon-box-green">
               <div class="icon"><i class='bx bx-diamond'></i></div>
               <h4 class="title"><a>+250</a></h4>
-              <p class="description">empreendedores treinados em vendas diretas</p>
+              <p class="description">empreendedores treinados em marketing e vendas diretas</p>
             </div>
           </div>
 
