--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             <div class="icon-box icon-box-pink">
               <div class="icon"><i class='bx bx-timer bx-tada'></i></div>
               <h4 class="title"><a>+50</a></h4>
-              <p class="description">horas completas de processos de coaching individual</p>
+              <p class="description">horas completas de processos de coaching individual e em grupo</p>
             </div>
           </div>
 
