--- a/index.html
+++ b/index.html
@@ -248,7 +248,9 @@
 
         <div class="section-title">
           <h2>Especialidades</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Acredito na integração de ferramentas, técnicas e diferentes metodologias para obtenção de resultados significativos e 
+            que atuem na raiz da causa não apenas nos sintomas aparentes a nível consciente de um determinado problema.
+          </p>
         </div>
 
         <div class="row" data-aos="fade-up">
@@ -258,12 +260,16 @@
           <div class="col-md-7 pt-4">
             <h3>Hipnoterapia</h3>
             <p class="font-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              A hipnoterapia consiste no uso de técnicas hipnóticas como ferramenta terapêutica, capaz de auxiliar um tratamento ou 
+              permitir que as potencialidades internas de cada indivíduo sejam ampliadas.
+            </p>
+            <p>
+              Alguns Benefícios:
             </p>
             <ul>
-              <li><i class="icofont-check"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="icofont-check"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
+              <li><i class="icofont-check"></i> Auxílio no tratamento de distúrbios psicológicos como depressão, fobias, ansiedade, TOC, traumas, compulsões alimentares, questões sexuais, obsessões, etc.</li>
+              <li><i class="icofont-check"></i> Auto-Hipnose para obter maior concentração, autocura, foco, criatividade, autocontrole, auxílio no emagrecimento, aumento de confiança, controle do estresse, entre outros benefícios.</li>
+              <li><i class="icofont-check"></i> Mudanças de hábitos e auxílio a superação de vícios como alcoolismo, tabagismo, drogas ilícitas, vício em jogos, compulsão sexual, ciúme patológico, compra compulsiva, entre outros transtornos.</li>
             </ul>
           </div>
         </div>
@@ -275,13 +281,11 @@
           <div class="col-md-7 pt-5 order-2 order-md-1">
             <h3>Coaching</h3>
             <p class="font-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Costumo dizer que o coach é um processo colaborativo para transformação de indivíduos e consequentemente dos ambientes que eles se encontram.
             </p>
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
+              O processo de coaching te leva a novos entendimentos, alternativas e opções capazes de fazer com que amplie suas realizações e conquistas. <br><br>Alguns dos benefícios são: Definição de metas e objetivos mais claros, desenvolvimento de planos de ação efetivos, autoconhecimento, tomada de decisões mais rápidas e assertivas, 
+              planejamento estratégico, gestão de tempo e de atividades, foco e produtividade, autoconfiança, melhoria na comunicação, desenvolvimento e aprimoramento de habilidades e capacidades, dentre outros.
             </p>
           </div>
         </div>
@@ -292,11 +296,22 @@
           </div>
           <div class="col-md-7 pt-5">
             <h3>Programação Neurolinguística</h3>
-            <p>Cupiditate placeat cupiditate placeat est ipsam culpa. Delectus quia minima quod. Sunt saepe odit aut quia voluptatem hic voluptas dolor doloremque.</p>
+            <p class="font-italic">PNL é liberdade!</p>
+            <p>
+              A Programação Neurolinguística é a arte da excelência humana - Consiste em entender e saber como usar a linguagem da nossa mente, os nossos processamentos mentais, para realizar de forma constante os objetivos e resultados que desejamos alcançar.
+            </p>
+            <p>
+              Alguns Benefícios:
+            </p>
             <ul>
-              <li><i class="icofont-check"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="icofont-check"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-              <li><i class="icofont-check"></i> Facilis ut et voluptatem aperiam. Autem soluta ad fugiat.</li>
+              <li><i class="icofont-check"></i> Maior domínio do próprio comportamento.</li>
+              <li><i class="icofont-check"></i> Desenvolvimento pessoal e alta performance.</li>
+              <li><i class="icofont-check"></i> Desenvolvimento da inteligência emocional.</li>
+              <li><i class="icofont-check"></i> Maior capacidade de influência.</li>
+              <li><i class="icofont-check"></i> Aprimoramento de comunicação efetiva.</li>
+              <li><i class="icofont-check"></i> Maior desenvoltura no relacionamento interpessoal.</li>
+              <li><i class="icofont-check"></i> Facilidade em resolver conflitos.</li>
+              <li><i class="icofont-check"></i> Construção de padrões e hábitos de sucesso.</li>
             </ul>
           </div>
         </div>
@@ -308,13 +323,10 @@
           <div class="col-md-7 pt-5 order-2 order-md-1">
             <h3>Time Line Therapy®</h3>
             <p class="font-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Considerada uma das mais poderosas terapias modernas associadas à mudança emocional e crescimento pessoal.
             </p>
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
+              A TLT® é um poderoso processo terapêutico que evoluiu da hipnose e da PNL, desenvolvido por Tad James, PhD na década de 1980. <br><br>Ela permite libertar emoções negativas ligadas a memórias ou acontecimentos do passado, assim como decisões limitantes, entre outros. Nos possibilitando aprender com estes eventos e usar as aprendizagens como recursos no futuro, trazendo assim mudanças duradouras e que podem ser alcançadas num curto espaço de tempo e com o menor esforço possível.
             </p>
           </div>
         </div>
