--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Luis Ferreira</title>
-  <meta content="" name="descriptison">
+  <title>Luis Ferreira | Hipnoterapia e Coaching</title>
+  <meta content="Descubra como acessar e usar seus recursos internos para obter uma vida equilibrada, alcançando seus objetivos de carreira e estilo de vida." name="descriptison">
   <meta content="" name="keywords">
+
+  <link rel="canonical" href="https://luisrbferreira.com/">
 
   <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="57x57" href="assets/img/favicons/apple-icon-57x57.png">
@@ -27,6 +29,25 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
+  
+  <!-- Facebook Opengraph integration: https://developers.facebook.com/docs/sharing/opengraph -->
+  <meta property="og:locale" content="pt_BR">
+  <meta property="og:title" content="Luis Ferreira | Hipnoterapia e Coaching">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://luisrbferreira.com/">
+  <meta property="og:site_name" content="Luis Ferreira | Hipnoterapia e Coaching">
+  <meta property="og:description" content="Descubra como acessar e usar seus recursos internos para obter uma vida equilibrada, alcançando seus objetivos de carreira e estilo de vida.">
+  <meta property="og:image" content="assets/img/eu.jpeg">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="400">
+  <meta property="og:image:height" content="300">
+
+  <!-- Twitter Cards integration: https://dev.twitter.com/cards/  -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="https://luisrbferreira.com/">
+  <meta name="twitter:title" content="Luis Ferreira | Hipnoterapia e Coaching">
+  <meta name="twitter:description" content="Descubra como acessar e usar seus recursos internos para obter uma vida equilibrada, alcançando seus objetivos de carreira e estilo de vida.">
+  <meta name="twitter:image" content="assets/img/eu.jpeg">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
@@ -60,7 +81,7 @@
       <div class="logo float-left">
         <!-- <h1 class="text-light"><a href="index.html"><span>Moderna</span></a></h1> -->
         <!-- Uncomment below if you prefer to use an image logo -->
-        <a href="#"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
+        <a href="#"><img src="assets/img/logo.png" alt="Luis Ferreira: Te ensino a acessar e usar seus recursos internos para obter uma vida equilibrada, alcançando seus objetivos de carreira e estilo de vida." class="img-fluid"></a>
       </div>
 
       <nav class="nav-menu float-right d-none d-lg-block">
@@ -81,7 +102,7 @@
     <div class="container position-relative" data-aos="fade-up" data-aos-delay="100">
       <div class="row justify-content-center">
         <div class="col-xl-8">
-          <h2>Hipnoterapia <br> Programação Neurolinguística <br>Time Line Therapy® & Coaching</h2>
+          <h1>Hipnoterapia <br> Programação Neurolinguística <br>Time Line Therapy® & Coaching</h1>
           <!-- <p>A sua mente pode ser a sua maior aliada ou a sua principal inimiga - Assim como ela conhece 
             quais são os seus pontos fortes, ela cria e domina as suas fraquezas e medos mais profundos.
             <br>Domine a sua mente e nada poderá te parar!
@@ -103,7 +124,7 @@
 
         <div class="row">
           <div class="col-lg-6">
-            <img src="assets/img/eu.jpeg" class="img-fluid" alt="">
+            <img src="assets/img/eu.jpeg" class="img-fluid" alt="Luis Ferreira: Te ensino a acessar e usar seus recursos internos para obter uma vida equilibrada, alcançando seus objetivos de carreira e estilo de vida.">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <h3>Sobre mim</h3>
