--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
         <div class="section-title">
           <h2>Especialidades</h2>
           <p>Acredito na integração de ferramentas, técnicas e diferentes metodologias para obtenção de resultados significativos e 
-            que atuem na raiz da causa não apenas nos sintomas aparentes a nível consciente de um determinado problema.
+            que atuem na raiz da causa, não apenas nos sintomas aparentes a nível consciente de um determinado problema.
           </p>
         </div>
 
