--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
           <div class="col-md-7 pt-5 order-2 order-md-1">
             <h3>Coaching</h3>
             <p class="font-italic">
-              Costumo dizer que o coach é um processo colaborativo para transformação de indivíduos e consequentemente dos ambientes que eles se encontram.
+              Costumo dizer que o coaching é um processo colaborativo para transformação de indivíduos e consequentemente dos ambientes que eles se encontram.
             </p>
             <p>
               O processo de coaching te leva a novos entendimentos, alternativas e opções capazes de fazer com que amplie suas realizações e conquistas. <br><br>Alguns dos benefícios são: Definição de metas e objetivos mais claros, desenvolvimento de planos de ação efetivos, autoconhecimento, tomada de decisões mais rápidas e assertivas, 
