--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
               Considerada uma das mais poderosas terapias modernas associadas à mudança emocional e crescimento pessoal.
             </p>
             <p>
-              A TLT® é um poderoso processo terapêutico que evoluiu da hipnose e da PNL, desenvolvido por Tad James, PhD na década de 1980. <br><br>Ela permite libertar emoções negativas ligadas a memórias ou acontecimentos do passado, assim como decisões limitantes, entre outros. Nos possibilitando aprender com estes eventos e usar as aprendizagens como recursos no futuro, trazendo assim mudanças duradouras e que podem ser alcançadas num curto espaço de tempo e com o menor esforço possível.
+              A TLT® é um poderoso processo terapêutico que evoluiu da hipnose e da PNL, desenvolvido por Tad James, PhD na década de 1980. <br><br>Ela permite limpar emoções negativas ligadas a memórias ou acontecimentos do passado, assim como decisões limitantes, entre outros. Nos possibilitando aprender com estes eventos e usar as aprendizagens como recursos no futuro, trazendo assim mudanças duradouras e que podem ser alcançadas num curto espaço de tempo e com o menor esforço possível.
             </p>
           </div>
         </div>
