--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <div class="logo float-left">
         <!-- <h1 class="text-light"><a href="index.html"><span>Moderna</span></a></h1> -->
         <!-- Uncomment below if you prefer to use an image logo -->
-        <a href="#"><img src="assets/img/logo.png" alt="Luis Ferreira: Te ensino a acessar e usar seus recursos internos para obter uma vida equilibrada, alcançando seus objetivos de carreira e estilo de vida." class="img-fluid"></a>
+        <a href="https://luisrbferreira.com/"><img src="assets/img/logo.png" alt="Luis Ferreira: Te ensino a acessar e usar seus recursos internos para obter uma vida equilibrada, alcançando seus objetivos de carreira e estilo de vida." class="img-fluid"></a>
       </div>
 
       <nav class="nav-menu float-right d-none d-lg-block">
