--- a/index.html
+++ b/index.html
@@ -362,21 +362,23 @@
 
         <div class="section-title">
           <h2>Bônus</h2>
-          <p>Estou abrindo 5 vagas para pessoas que queiram realizar uma sessão de coaching <br>de forma totalmente gratuita, confere os beneficíos abaixo.</p>
+          <p>"Tudo acontece duas vezes. Primeiro na nossa mente e depois no mundo real".<br>Estou disponibilizando gratuitamente o meu Guia de Planejamento de 12 Semanas. Ou seja, você vai ter em mãos a mesma ferramenta que utilizo para planejar, executar e ir na direção de concretizar todos os seus objetivos em 90 dias.</p>
         </div>
 
         <div class="row justify-content-center no-gutters">
 
           <div class="col-lg-4 box">
             <h3>Grátis</h3>
-            <h4>$0<span>primeira sessão</span></h4>
+            <h4>$0<span>*Por tempo limitado</span></h4>
             <ul>
-              <li><i class="bx bx-check"></i> Ferramenta Roda da vida</li>
-              <li><i class="bx bx-check"></i> Ferramenta A Grande Jornada</li>
-              <li><i class="bx bx-check"></i> Especificação de Objetivos</li>
-              <li><i class="bx bx-check"></i> Definição de Metas</li>
+              <li><i class="bx bx-check"></i> Guia completo de planejamento</li>
+              <li><i class="bx bx-check"></i> Tirar ideias da mente</li>
+              <li><i class="bx bx-check"></i> Ter mais Comprometimento</li>
+              <li><i class="bx bx-check"></i> Ter mais Clareza</li>
+              <li><i class="bx bx-check"></i> Ter mais Foco</li>
+              
             </ul>
-            <a href="https://wa.me/557193750934?text=Oi%20Luis%2C%20quero%20saber%20mais%20sobre%20a%20sess%C3%A3o%20gratuita." target="_blank" class="get-started-btn">Garantir Vaga</a>
+            <a href="https://wa.me/557193750934?text=Oi%20Luis%2C%20quero%20saber%20mais%20sobre%20a%20sess%C3%A3o%20gratuita." target="_blank" class="get-started-btn">Quero Meu Guia</a>
           </div>
         </div>
       </div>
