--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Bônus</h2>
+          <h2>Bônus de Lançamento</h2>
           <p>Estou disponibilizando gratuitamente o meu Guia de Planejamento de 12 Semanas. Você vai ter em mãos a mesma ferramenta que utilizo para planejar, executar e ir na direção de concretizar todos os seus objetivos em 90 dias.</p>
         </div>
 
