--- a/index.html
+++ b/index.html
@@ -371,11 +371,11 @@
             <h3>Grátis</h3>
             <h4>$0<span>*Por tempo limitado</span></h4>
             <ul>
-              <li><i class="bx bx-check"></i> Guia completo de planejamento</li>
-              <li><i class="bx bx-check"></i> Tirar ideias da mente</li>
-              <li><i class="bx bx-check"></i> Ter mais Comprometimento</li>
-              <li><i class="bx bx-check"></i> Ter mais Clareza</li>
-              <li><i class="bx bx-check"></i> Ter mais Foco</li>              
+              <li><i class="bx bx-check"></i> Planejamento completo</li>
+              <li><i class="bx bx-check"></i> Entre em Ação</li>
+              <li><i class="bx bx-check"></i> Tenha + Comprometimento</li>
+              <li><i class="bx bx-check"></i> Tenha + Clareza</li>
+              <li><i class="bx bx-check"></i> Tenha + Foco</li>
             </ul>
             <a href="https://wa.me/557193750934?text=Oi%20Luis%2C%20quero%20saber%20mais%20sobre%20a%20sess%C3%A3o%20gratuita." target="_blank" class="get-started-btn">Quero Meu Guia</a>
           </div>
