--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
             <h3>Grátis</h3>
             <h4>$0<span>*Por tempo limitado</span></h4>
             <ul>
-              <li><i class="bx bx-check"></i> Planejamento completo</li>
+              <li><i class="bx bx-check"></i> Planejamento Completo</li>
               <li><i class="bx bx-check"></i> Tenha + Comprometimento</li>
               <li><i class="bx bx-check"></i> Tenha + Clareza</li>
               <li><i class="bx bx-check"></i> Tenha + Foco</li>
