--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
 
         <div class="section-title">
           <h2>Bônus de Lançamento</h2>
-          <p>Estou disponibilizando gratuitamente o meu Guia de Planejamento de 12 Semanas. Você vai ter em mãos a mesma ferramenta que utilizo para planejar, executar e ir na direção de concretizar todos os seus objetivos em 90 dias.</p>
+          <p>Estou disponibilizando gratuitamente o meu Guia de Planejamento de 12 Semanas. Você vai ter em mãos a mesma ferramenta que utilizo para planejar, executar e ir na direção de concretizar os seus objetivos em 90 dias.</p>
         </div>
 
         <div class="row justify-content-center no-gutters">
