--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
 
           <div class="col-lg-6 col-md-6 footer-info">
             <h3>Atualizações</h3>
-            <p>Receba em primeira mão através das minhas redes sociais conteúdos e insights que vão te ajudar no alcance das suas metas e objetivos.<br><br></p>
+            <p>Receba em primeira mão através das minhas redes sociais conteúdos e insights que vão te ajudar no planejamento, execução e alcance das suas metas e objetivos.<br><br></p>
             <div class="social-links mt-3">
               <a href="https://www.instagram.com/luisrbferreira/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
               <a href="https://www.facebook.com/eu.luisrbferreira" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
