--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
               Hipnoterapeuta e Trainer de Hipnoterapia | Coach e Practitioner em Programação Neurolinguística e Time Line Therapy®.
             </p>
             <p>
-              Ajudo empreendedores, indivíduos motivados e filantropos a acessar e usar seus recursos internos para obter uma vida equilibrada, alcançando seus objetivos de carreira e estilo de vida.
+              Ajudo pessoas a acessar e usar seus recursos internos para obter uma vida equilibrada, criar, desenvolver e potencializar negócios, alcançando assim objetivos de carreira e estilo de vida.
 
               <br><br>Sou certificado internacionalmente como:
             </p>
