--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           <div class="col-lg-6 pt-4 pt-lg-0">
             <h3>Sobre mim</h3>
             <p class="font-italic">
-              Hipnoterapeuta e Trainer de Hipnoterapia | Coach e Practitioner em Programação Neurolinguística e Time Line Therapy®.
+              Mentor & Coach | Hipnoterapeuta & Trainer de Hipnoterapia | Practitioner em Programação Neurolinguística & Time Line Therapy®.
             </p>
             <p>
               Ajudo você a acessar e usar seus recursos internos para obter uma vida equilibrada, criar, desenvolver e potencializar negócios, alcançando assim seus objetivos de carreira e estilo de vida.
