--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <li class="active"><a href="#hero-no-slider">Início</a></li>
           <li><a href="#main">Sobre mim</a></li>
           <li><a href="#especialidades">Especialidades</a></li>
-          <li><a href="#bonus">Bônus</a></li>
+          <!-- <li><a href="#bonus">Bônus</a></li> -->
           <li><a href="#footer">Contatos</a></li>
         </ul>
       </nav><!-- .nav-menu --> 
@@ -132,8 +132,8 @@
               Mentor & Coach | Hipnoterapeuta & Trainer de Hipnoterapia | Practitioner em Programação Neurolinguística & Time Line Therapy®.
             </p>
             <p>
-              Ajudo você a acessar e usar seus recursos internos para obter uma vida equilibrada, criar, desenvolver e potencializar negócios, alcançando assim seus objetivos de carreira e estilo de vida.
-
+              Te mostro como acessar e usar seus recursos internos para obter uma vida equilibrada, criar, desenvolver e potencializar negócios, alcançando assim seus objetivos de carreira e estilo de vida.
+              
               <br><br>Sou certificado internacionalmente como:
             </p>
             <ul>
@@ -357,7 +357,7 @@
     <!-- End Features Section -->
 
     <!-- ======= Pricing Section ======= -->
-    <section id="bonus" class="pricing section-bg" data-aos="fade-up">
+    <!-- <section id="bonus" class="pricing section-bg" data-aos="fade-up">
       <div class="container">
 
         <div class="section-title">
@@ -381,7 +381,8 @@
           </div>
         </div>
       </div>
-    </section><!-- End Pricing Section -->
+    </section> -->
+    <!-- End Pricing Section -->
 
   </main>
   <!-- End #main -->
