--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
         <div class="row">
           <div class="col-lg-6">
-            <img src="assets/img/eu.jpeg" class="img-fluid" alt="Luis Ferreira: Te ensino a acessar e usar seus recursos internos para obter uma vida equilibrada, alcançando seus objetivos de carreira e estilo de vida.">
+            <img style="border-radius: 150px;" src="assets/img/eu.jpeg" class="img-fluid" alt="Luis Ferreira: Te ensino a acessar e usar seus recursos internos para obter uma vida equilibrada, alcançando seus objetivos de carreira e estilo de vida.">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <h3>Sobre mim</h3>
