--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
             <p>Receba em primeira mão através das minhas redes sociais conteúdos e insights que vão te ajudar no planejamento, execução e alcance das suas metas e objetivos.<br><br></p>
             <div class="social-links mt-3">
               <a href="https://www.instagram.com/luisrbferreira/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
-              <a href="https://www.facebook.com/eu.luisrbferreira" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
+              <a href="https://www.facebook.com/euluisferreira" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
               <a href="https://www.linkedin.com/in/luisrbferreira/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
             </div>
           </div>
